bk_ida/gccida/c1/product_cheap_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/product_cheap_p/src/loop.c:8294:16: error: use of undeclared identifier 'machine_mode'
expand_mult( ( machine_mode)*( ( unsigned __int8 *)v3 + 2), v3, v2, 0LL, 1); 
               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/product_cheap_p/src/obj/loop.o] Error 1
